--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "ComfyFlix",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "manifest_version": 2,
   "description": "The key to good sleep!",
-  "homepage_url": "https://tigerweb.towson.edu/mboyd8/",
+  "homepage_url": "https://malexanderboyd.github.io/",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
