--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "ComfyFlix",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "manifest_version": 2,
   "description": "The key to good sleep!",
-  "homepage_url": "https://malexanderboyd.github.io/",
+  "homepage_url": "https://github.com/malexanderboyd/ComfyFlix",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
