--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "ComfyFlix",
   "version": "2.0.5",
   "manifest_version": 2,
-  "description": "ComfyFlix allows you to skip the countdown timer between episodes on Netflix, and includes a sleep mode. No Setup needed, just install and go to Netflix",
+  "description": "ComfyFlix allows you to skip the countdown timer between episodes on Netflix, and includes a sleep mode. No Setup needed.",
   "homepage_url": "https://github.com/malexanderboyd/ComfyFlix",
   "icons": {
     "16": "icons/icon16.png",
