--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
   "name": "ComfyFlix",
+  "version": "3.0.2",
   "manifest_version": 2,
+  "description": "ComfyFlix clicks the count down timer between episodes and the skip intro button on Netflix for you. No Setup needed.",
   "homepage_url": "https://github.com/malexanderboyd/ComfyFlix",
   "icons": {
     "16": "icons/icon16.png",
